--- a/app/src/main/res/layout/face.xml
+++ b/app/src/main/res/layout/face.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:id="@+id/ha"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
         <edu.up.facemaker.Face
             android:id="@+id/view"
             android:layout_width="match_parent"
-            android:layout_height="564dp" />
+            android:layout_height="564dp"
+            android:background="@color/white" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -35,7 +36,7 @@
                     android:text="How Much Red?" />
 
                 <SeekBar
-                    android:id="@+id/RedSeek"
+                    android:id="@+id/redSeek"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -49,12 +50,11 @@
                     android:text="How Much Green" />
 
                 <SeekBar
-                    android:id="@+id/GreenSeek"
+                    android:id="@+id/greenSeek"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:max="250"
-                    />
+                    android:max="250" />
 
                 <TextView
                     android:id="@+id/Blue"
@@ -88,8 +88,7 @@
                     android:id="@+id/spinner"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    />
+                    android:layout_weight="1" />
 
                 <RadioGroup
                     android:id="@+id/radiogroup"
